Refactor api and frontend dashboard components
